--- a/NORM.css
+++ b/NORM.css
@@ -21,24 +21,11 @@ p {
   margin: 150px auto;
 }
 
-.menu > li {
-  width: 20%; /*20*5=100%*/
-  float: left;
+li {
+  float:left;
+  list-style: none;
+  width:13.8%;
+  height: 20%;
   text-align: center;
-  line-height: 40px;
-  background-color: #5778ff;
-}
-
-.menu a {
-  color: #fff;
-}
-
-.submenu > li {
-  line-height: 50px;
-  background-color: #94a9ff;
-}
-
-.submenu {
-  height: 0; /*ul의 높이를 안보이게 처리*/
-  overflow: hidden;
+  background-color: rgb(30, 195, 255);
 }
